Use clearer root directory for indexes

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,4 +1,4 @@
-rootDirectory: '~/workspaces/Lucene/'
+rootDirectory: '/home/wilqor/workspaces/Lucene/'
 indexDirectories:
   KEYWORD_ANALYZER_EXAMPLE: 'keyword_analyzer'
   FACETING_EXAMPLE: 'faceting'
