--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -3,4 +3,5 @@ indexDirectories:
   KEYWORD_ANALYZER_EXAMPLE: 'keyword_analyzer'
   FACETING_EXAMPLE: 'faceting'
   WHITESPACE_ANALYZER_EXAMPLE: 'whitespace_analyzer'
+  STANDARD_ANALYZER_EXAMPLE: 'standard_analyzer'
 
