Implement StopFilter example

--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -5,4 +5,5 @@ indexDirectories:
   WHITESPACE_ANALYZER_EXAMPLE: 'whitespace_analyzer'
   STANDARD_ANALYZER_EXAMPLE: 'standard_analyzer'
   LOWER_CASE_TOKEN_FILTER_EXAMPLE: 'lower_case_token_filter'
+  STOP_WORDS_TOKEN_FILTER_EXAMPLE: 'stop_words_token_filter'
 
