--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -6,4 +6,6 @@ indexDirectories:
   STANDARD_TOKENIZER_EXAMPLE: 'standard_tokenizer'
   LOWER_CASE_TOKEN_FILTER_EXAMPLE: 'lower_case_token_filter'
   STOP_WORDS_TOKEN_FILTER_EXAMPLE: 'stop_words_token_filter'
+  SYNONYM_TOKEN_FILTER_EXAMPLE: 'synonym_token_filter'
+  HTML_CHAR_STRIP_FILTER_EXAMPLE: 'html_char_strip_filter'
 
