--- a/src/main/resources/config.yaml
+++ b/src/main/resources/config.yaml
@@ -1,4 +1,4 @@
-rootDirectory: 'C:\workspaces\Lucene'
+rootDirectory: '/Users/admin/'
 indexDirectories:
   KEYWORD_TOKENIZER_EXAMPLE: 'keyword_tokenizer'
   FACETING_EXAMPLE: 'faceting'
