--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     // test dependencies
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile 'org.apache.commons:commons-lang3:3.7'
 }
 
 def wikisearchapp = "$projectDir/src/main/wikisearch"
